...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y7J-0u-w5M" userLabel="Settings Button">
                                <rect key="frame" x="288" y="40" width="57" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Settings"/>
                                <state key="normal" title="Settings"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bh7-Ol-hI2" userLabel="Tutorial Button">
                                <rect key="frame" x="30" y="40" width="51" height="30"/>
                                <state key="normal" title="Tutorial"/>
                                <connections>
                                    <action selector="goToTutorial" destination="BYZ-38-t0r" eventType="touchUpInside" id="obS-Qc-oUv"/>
...
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5RZ-7f-3CS" userLabel="Next Button">
                                <rect key="frame" x="324" y="619" width="30" height="29"/>
                                <accessibility key="accessibilityConfiguration" label="Next"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Next"/>
...
                                                </constraints>
                                                <segments>
                                                    <segment title="None"/>
                                                    <segment title="Files App"/>
                                                    <segment title="Google Drive"/>
...
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S9r-LJ-W69" userLabel="Black Background Toggle">
                                                <rect key="frame" x="157" y="703" width="63" height="28"/>
                                                <accessibility key="accessibilityConfiguration" label="Toggle using black background"/>
                                                <connections>
                                                    <action selector="blackBackgroundChanged:" destination="ayx-Do-FJf" eventType="valueChanged" id="it7-SD-fTc"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="roH-yQ-Vce" userLabel="Navigation Content">
                        <barButtonItem key="leftBarButtonItem" title="Save" id="b5g-Ga-ipG" userLabel="Back Button">
                            <connections>
                                <action selector="backFromSettings:" destination="vL6-8S-A2W" id="K6m-5z-3R7"/>
...
