...
    // MARK: - UIViewController overrides

    override func viewDidLoad() {
        super.viewDidLoad()

        // So UI tests can find the results text
        resultsText.accessibilityIdentifier = "resultsValue"

        setupScrollView(scrollView: scrollView, self: self)
        setupImagePicker(imagePicker: imagePicker, self: self)

        pHPickerPresentationControllerDelegate = PHPickerPresentationControllerDelegate(viewController: self)

...
